--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.0",
     "uuidv4": "^6.2.12",
     "web-vitals": "^1.1.2"
   },
